...

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/txlFechaParalizacion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
                                android:layout_height="wrap_content"
                                android:hint="@string/til_fecha_paralizacion" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tlInicioReparacion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
                                android:layout_height="wrap_content"
                                android:hint="@string/til_fecha_inicio" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tlEstado"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
                                android:layout_height="wrap_content"
                                android:hint="@string/til_estado" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tlFechaFin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
                                android:layout_height="wrap_content"
                                android:hint="@string/til_fecha_fin" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tlDiasAsignados"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
                                android:layout_height="wrap_content"
                                android:hint="@string/til_dias_asignados" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tlDiagnostico"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
                                android:layout_height="wrap_content"
                                android:hint="@string/til_diagnostico" />

                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/btnSaveData"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
...
